<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/create_profile"
        android:id="@+id/txt_create_profile"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/ll_chose_profile_type"
        android:layout_below="@+id/txt_create_profile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="1dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/user"
            android:textColor="@color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            ></View>
        <Button
            android:id="@+id/btn_doctor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="Doctor"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_personal_info"
        android:layout_below="@+id/ll_chose_profile_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/profile_info"
    android:layout_marginTop="5dp"
    android:textColor="@color/black"
    android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="20sp"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_pass"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_repeat_pass"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_pass"
            android:textSize="20sp"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_first_name"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_last_name"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_height="wrap_content"
            android:hint="@string/your_phone_number"
            android:textSize="18sp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_professional_info"
        android:layout_below="@+id/ll_personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_info"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_select_cat"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_shape_blue"
            android:text="Select category"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_speciality"
            android:layout_height="wrap_content"
            android:hint="@string/speciality"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_professional_desc"
            android:layout_height="wrap_content"
            android:hint="Professional description"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_city"
            android:layout_height="wrap_content"
            android:hint="City"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_hospital_name"
            android:layout_height="wrap_content"
            android:hint="@string/hospital_name"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_height="wrap_content"
            android:hint="@string/hospital_address"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/round_shape_white"
            android:visibility="gone"
            android:padding="5dp"/>

        <Button
            android:id="@+id/btn_select_address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_shape_blue"
            android:text="Select address"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
    </LinearLayout>

    </RelativeLayout>
</ScrollView>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"/>
</RelativeLayout>
